--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -1,43 +1,25 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Jasmine Spec Runner</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<title>Jasmine Spec Runner v2.0.0</title>
 
+		<link rel="shortcut icon" type="image/png" href="../bower_components/jasmine/images/jasmine_favicon.png">
 		<link rel="stylesheet" type="text/css" href="../bower_components/jasmine/lib/jasmine-core/jasmine.css">
-		<script src="../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
-		<script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
+
+		<script type="text/javascript" src="../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
+		<script type="text/javascript" src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
+		<script type="text/javascript" src="../bower_components/jasmine/lib/jasmine-core/boot.js"></script>
 
 		<!-- include source files here... -->
-		<script src="../bower_components/angular/angular.js"></script>
-		<script src="../bower_components/angular-mocks/angular-mocks.js"></script>
-		<script src="../src/angular-activerecord.js"></script>
+		<script type="text/javascript" src="../bower_components/angular/angular.js"></script>
+		<script type="text/javascript" src="../bower_components/angular-mocks/angular-mocks.js"></script>
+
+		<script type="text/javascript" src="../src/angular-activerecord.js"></script>
 
 		<!-- include spec files here... -->
+		<script type="text/javascript" src="ExampleFilters.js"></script>
 		<script type="text/javascript" src="ActiveRecordSpec.js"></script>
-
-		<script type="text/javascript">
-			(function() {
-				var jasmineEnv = jasmine.getEnv();
-				jasmineEnv.updateInterval = 1000;
-
-				var trivialReporter = new jasmine.TrivialReporter();
-				jasmineEnv.addReporter(trivialReporter);
-				jasmineEnv.specFilter = function(spec) {
-					return trivialReporter.specFilter(spec);
-				};
-				var currentWindowOnload = window.onload;
-				window.onload = function() {
-					if (currentWindowOnload) {
-						currentWindowOnload();
-					}
-					execJasmine();
-				};
-				function execJasmine() {
-					jasmineEnv.execute();
-				}
-			})();
-	</script>
 	</head>
-
 	<body></body>
 </html>
